--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<-Dbrowser=firefox Elfsight Appointment Booking | Untitled Appointment Booking 8 -->
+<-- Elfsight Appointment Booking | Untitled Appointment Booking 8 -->
 <script src=https://static.elfsight.com/platform/platform.js async></script>
 <div class=elfsight-app-a7ba138b-b206-4880-9683-41774af20440 data-elfsight-app-lazy></div>
