--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<p>привет!</p>
+
+<button onclick="location.href='тест/'">Перейти на /тест</button>
+
 <div style="width"100%">
 <!-- Elfsight Social Share Buttons | Untitled Social Share Buttons 4 -->
 <script src="https://static.elfsight.com/platform/platform.js" async></script>
