--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <title>Главная</title>
+</head>
+<body>
+  <h1>Главная страница</h1>
 
-<button onclick="location.href='тест/'">Перейти на /тест</button>
+  <button onclick="location.href='тест/'">Перейти на /тест</button>
 
-<div style="width"100%">
-<!-- Elfsight Social Share Buttons | Untitled Social Share Buttons 4 -->
-<script src="https://static.elfsight.com/platform/platform.js" async></script>
-<div class="elfsight-app-5b02e447-8cb8-4584-a796-8a5fb301eb99" data-elfsight-app-lazy></div>
-</div>
+</body>
+</html>
