--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 
   <button onclick="location.href='тест/'">Перейти на /тест</button>
 
+  <!-- Elfsight Social Share Buttons | Untitled Social Share Buttons 4 -->
+<script src="https://static.elfsight.com/platform/platform.js" async></script>
+<div class="elfsight-app-5b02e447-8cb8-4584-a796-8a5fb301eb99" data-elfsight-app-lazy></div>
+
 </body>
 </html>
