--- a/te$t/index.html
+++ b/te$t/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Страница /тест</title>
+  <title>Страница /te$t</title>
 </head>
 <body>
   <h1>Страница "te$t"</h1>
