--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <h1>Главная страница</h1>
 
   <button onclick="location.href='тест/'">Перейти на /тест</button>
+    <button onclick="location.href='te$t/'">Перейти на /te$t</button>
 
   <!-- Elfsight Social Share Buttons | Untitled Social Share Buttons 4 -->
 <script src="https://static.elfsight.com/platform/platform.js" async></script>
