--- a/тест/index.html
+++ b/тест/index.html
@@ -8,10 +8,11 @@
   <h1>Страница "тест"</h1>
 
   <p>Это отдельная страница с кириллицей в пути.</p>
-
-<!-- Elfsight Social Share Buttons | Untitled Social Share Buttons 4 -->
-<script src="https://static.elfsight.com/platform/platform.js" async></script>
-<div class="elfsight-app-5b02e447-8cb8-4584-a796-8a5fb301eb99" data-elfsight-app-lazy></div>
+<div style="background-solor:grey";
+<!-- Elfsight All-in-One Reviews | AIOR RR -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-f71725dc-f7d9-4ea3-8d90-c2a7fbc9f7d9" data-elfsight-app-lazy></div>
+</div>
 
 </body>
 </html>
