--- a/тест/index.html
+++ b/тест/index.html
@@ -8,7 +8,7 @@
   <h1>Страница "тест"</h1>
 
   <p>Это отдельная страница с кириллицей в пути.</p>
-<div style="background-solor:grey";
+<div style="background-solor:grey">
 <!-- Elfsight All-in-One Reviews | AIOR RR -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
 <div class="elfsight-app-f71725dc-f7d9-4ea3-8d90-c2a7fbc9f7d9" data-elfsight-app-lazy></div>
