--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <button onclick="location.href='тест/'">Перейти на /тест</button>
     <button onclick="location.href='te$t/'">Перейти на /te$t</button>
 
-  <!-- Elfsight Social Share Buttons | Untitled Social Share Buttons 4 -->
-<script src="https://static.elfsight.com/platform/platform.js" async></script>
-<div class="elfsight-app-5b02e447-8cb8-4584-a796-8a5fb301eb99" data-elfsight-app-lazy></div>
+<!-- Elfsight Background Music | BM Autoplay fix on Android (WIDGETS-3855) -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-f69c77c1-3e83-4ed2-a2ad-edb6a303c98a" data-elfsight-app-lazy></div>
 
 </body>
 </html>
