--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <button onclick="location.href='тест/'">Перейти на /тест</button>
     <button onclick="location.href='te$t/'">Перейти на /te$t</button>
 
-<!-- Elfsight Background Music | BM Autoplay fix on Android (WIDGETS-3855) -->
+<!-- Elfsight Background Music | BM prod -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-f69c77c1-3e83-4ed2-a2ad-edb6a303c98a" data-elfsight-app-lazy></div>
+<div class="elfsight-app-5dd91d53-437a-489c-b24c-a44f2ea63a58" data-elfsight-app-lazy></div>
 
 </body>
 </html>
