--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <button onclick="location.href='тест/'">Перейти на /тест</button>
     <button onclick="location.href='te$t/'">Перейти на /te$t</button>
 
-<!-- Elfsight Background Music | BM prod -->
+<!-- Elfsight Audio Player | AP Autoplay fix on Android (WIDGETS-3855) -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-5dd91d53-437a-489c-b24c-a44f2ea63a58" data-elfsight-app-lazy></div>
+<div class="elfsight-app-8427dda1-6779-4cac-af00-b0bd48aa2290" data-elfsight-app-lazy></div>
 
 </body>
 </html>
