--- a/тест/index.html
+++ b/тест/index.html
@@ -3,16 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <title>Страница /тест</title>
+  <!-- Mobile-friendly scaling -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      margin: 0;
+      font-family: sans-serif;
+    }
+    h1, p {
+      padding: 0 1rem;
+    }
+
+  </style>
 </head>
 <body>
   <h1>Страница "тест"</h1>
-
   <p>Это отдельная страница с кириллицей в пути.</p>
-<div style="background-solor:grey">
-<!-- Elfsight All-in-One Reviews | AIOR RR -->
-<script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-f71725dc-f7d9-4ea3-8d90-c2a7fbc9f7d9" data-elfsight-app-lazy></div>
-</div>
 
+    <!-- Elfsight Radio Player | RP Autoplay fix on Android (WIDGETS-3855) -->
+    <script src="https://elfsightcdn.com/platform.js" async></script>
+    <div class="elfsight-app-e1acb6a6-7fcf-4bba-ae75-2477ac6c5b84" data-elfsight-app-lazy></div>
 </body>
 </html>
