--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <button onclick="location.href='тест/'">Перейти на /тест</button>
     <button onclick="location.href='te$t/'">Перейти на /te$t</button>
 
-<!-- Elfsight Podcast Player | PP Autoplay fix on Android (WIDGETS-3855) -->
+<!-- Elfsight LinkedIn Feed | LF: New Pagination (WIDGETS-3867) -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-9e3655a0-a05d-47e3-8a72-edb4e14c8119" data-elfsight-app-lazy></div>
+<div class="elfsight-app-720dc149-94ef-403f-b6f9-a2c2bd031973" data-elfsight-app-lazy></div>
 
 </body>
 </html>
