--- a/te$t/index.html
+++ b/te$t/index.html
@@ -9,9 +9,9 @@
 
   <p>Это отдельная страница со спецсимволом в пути.</p>
 
-<!-- Elfsight Social Share Buttons | Untitled Social Share Buttons 4 -->
-<script src="https://static.elfsight.com/platform/platform.js" async></script>
-<div class="elfsight-app-5b02e447-8cb8-4584-a796-8a5fb301eb99" data-elfsight-app-lazy></div>
+<!-- Elfsight Form Builder | Forms: Signature (WIDGETS-1927) -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-a5be4a3c-3f9f-4af6-ac52-d6718e232a9a" data-elfsight-app-lazy></div>
 
 </body>
 </html>
