--- a/te$t/index.html
+++ b/te$t/index.html
@@ -3,15 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <title>Страница /te$t</title>
+  <!-- Mobile-friendly scaling -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      margin: 0;
+      font-family: sans-serif;
+    }
+    h1, p {
+      padding: 0 1rem;
+    }
+
+  </style>
 </head>
 <body>
   <h1>Страница "te$t"</h1>
-
-  <p>Это отдельная страница со спецсимволом в пути.</p>
+  <p>Это отдельная страница с кириллицей в пути.</p>
 
 <!-- Elfsight Form Builder | Forms: Signature (WIDGETS-1927) -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
 <div class="elfsight-app-a5be4a3c-3f9f-4af6-ac52-d6718e232a9a" data-elfsight-app-lazy></div>
-
 </body>
 </html>
