--- a/te$t/index.html
+++ b/te$t/index.html
@@ -20,8 +20,8 @@
   <h1>Страница "te$t"</h1>
   <p>Это отдельная страница с кириллицей в пути.</p>
 
-<!-- Elfsight Form Builder | Forms: Signature (WIDGETS-1927) -->
+<!-- Elfsight Form Builder | Forms: Signature (WIDGETS-1927) 2 -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-a5be4a3c-3f9f-4af6-ac52-d6718e232a9a" data-elfsight-app-lazy></div>
+<div class="elfsight-app-98d6db01-8ebc-4b99-bbb1-fb05215b1b3b" data-elfsight-app-lazy></div>
 </body>
 </html>
