--- a/тест/index.html
+++ b/тест/index.html
@@ -20,8 +20,8 @@
   <h1>Страница "тест"</h1>
   <p>Это отдельная страница с кириллицей в пути.</p>
 
-    <!-- Elfsight Radio Player | RP Autoplay fix on Android (WIDGETS-3855) -->
-    <script src="https://elfsightcdn.com/platform.js" async></script>
-    <div class="elfsight-app-e1acb6a6-7fcf-4bba-ae75-2477ac6c5b84" data-elfsight-app-lazy></div>
+<!-- Elfsight Audio Player | AP Autoplay fix on Android (WIDGETS-3855) -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-8427dda1-6779-4cac-af00-b0bd48aa2290" data-elfsight-app-lazy></div>
 </body>
 </html>
