--- a/тест/index.html
+++ b/тест/index.html
@@ -20,8 +20,8 @@
   <h1>Страница "тест"</h1>
   <p>Это отдельная страница с кириллицей в пути.</p>
 
-<!-- Elfsight Audio Player | AP Autoplay fix on Android (WIDGETS-3855) -->
+<!-- Elfsight Background Music | BM Autoplay fix on Android (WIDGETS-3855) -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-8427dda1-6779-4cac-af00-b0bd48aa2290" data-elfsight-app-lazy></div>
+<div class="elfsight-app-f69c77c1-3e83-4ed2-a2ad-edb6a303c98a" data-elfsight-app-lazy></div>
 </body>
 </html>
