--- a/тест/index.html
+++ b/тест/index.html
@@ -20,8 +20,8 @@
   <h1>Страница "тест"</h1>
   <p>Это отдельная страница с кириллицей в пути.</p>
 
-<!-- Elfsight Background Music | BM Autoplay fix on Android (WIDGETS-3855) -->
+<!-- Elfsight Podcast Player | PP Autoplay fix on Android (WIDGETS-3855) -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-f69c77c1-3e83-4ed2-a2ad-edb6a303c98a" data-elfsight-app-lazy></div>
+<div class="elfsight-app-9e3655a0-a05d-47e3-8a72-edb4e14c8119" data-elfsight-app-lazy></div>
 </body>
 </html>
