--- a/тест/index.html
+++ b/тест/index.html
@@ -20,8 +20,8 @@
   <h1>Страница "тест"</h1>
   <p>Это отдельная страница с кириллицей в пути.</p>
 
-<!-- Elfsight Podcast Player | PP Autoplay fix on Android (WIDGETS-3855) -->
+<!-- Elfsight All-in-One Reviews | free link test on free acc -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-9e3655a0-a05d-47e3-8a72-edb4e14c8119" data-elfsight-app-lazy></div>
+<div class="elfsight-app-9f668fc0-90ab-416f-8f75-27309845b79b" data-elfsight-app-lazy></div>
 </body>
 </html>
