--- a/тест/index.html
+++ b/тест/index.html
@@ -20,8 +20,8 @@
   <h1>Страница "тест"</h1>
   <p>Это отдельная страница с кириллицей в пути.</p>
 
-<!-- Elfsight All-in-One Reviews | test (WIDGETS-3877) -->
+<!-- Elfsight Calculator | test fields -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-ecf3b556-f679-4ce6-a1d4-0b65192ca2ad" data-elfsight-app-lazy></div>
+<div class="elfsight-app-2ee6ac69-1bbf-45c8-9493-2836e5ac5cc3" data-elfsight-app-lazy></div>
 </body>
 </html>
