--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 
   <button onclick="location.href='тест/'">Перейти на /тест</button>
     <button onclick="location.href='te$t/'">Перейти на /te$t</button>
-
-<!-- Elfsight LinkedIn Feed | LF: New Pagination (WIDGETS-3867) -->
+<!-- Elfsight Google Reviews | Untitled Google Reviews 7 -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-720dc149-94ef-403f-b6f9-a2c2bd031973" data-elfsight-app-lazy></div>
+<div class="elfsight-app-b38bccfb-46a3-445c-aae3-60855c433dfa" data-elfsight-app-lazy></div>
 
 </body>
 </html>
