--- a/тест/index.html
+++ b/тест/index.html
@@ -20,8 +20,8 @@
   <h1>Страница "тест"</h1>
   <p>Это отдельная страница с кириллицей в пути.</p>
 
-<!-- Elfsight Calculator | test fields -->
+<!-- Elfsight Form Builder | Untitled Form Builder 15 -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-2ee6ac69-1bbf-45c8-9493-2836e5ac5cc3" data-elfsight-app-lazy></div>
+<div class="elfsight-app-3e01f5a2-572a-49a7-9d8e-d6f46272d027" data-elfsight-app-lazy></div>
 </body>
 </html>
