--- a/тест/index.html
+++ b/тест/index.html
@@ -121,6 +121,9 @@
   </style>
 </head>
 <body>
+  <!-- Elfsight Website Translator | WT: prod -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-0bd57e1c-e051-44dd-bd5a-bfce05dbb88d" data-elfsight-app-lazy></div>
   <header>
     <h1>Салон красоты «Прекрасная жизнь»</h1>
   </header>
