--- a/тест/index.html
+++ b/тест/index.html
@@ -204,9 +204,9 @@
     });
   </script>
   <footer>
-    <!-- Elfsight Business Hours | BH: Custom Hours text issue fix (WIDGETS-3817) -->
+<!-- Elfsight Radio Player | Untitled Radio Player 4 -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-a94b9242-3cb4-4b34-a0ce-e147bb08e272" data-elfsight-app-lazy></div>
+<div class="elfsight-app-0c2c968a-da38-4608-a4d1-cadf2f2c341d" data-elfsight-app-lazy></div>
   </footer>
 </body>
 </html>
