--- a/тест/index.html
+++ b/тест/index.html
@@ -121,9 +121,9 @@
   </style>
 </head>
 <body>
-  <!-- Elfsight Website Translator | TEST API Copy -->
+<!-- Elfsight Radio Player | Untitled Radio Player -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-becc3f6a-a78d-4dce-ac75-34fd3d0e6940" data-elfsight-app-lazy></div>
+<div class="elfsight-app-29aa10fe-e814-41b1-b582-5877a4002a0a" data-elfsight-app-lazy></div>
   <header>
     <h1>Салон красоты «Прекрасная жизнь»</h1>
   </header>
