--- a/тест/index.html
+++ b/тест/index.html
@@ -121,9 +121,9 @@
   </style>
 </head>
 <body>
-<!-- Elfsight Radio Player | Untitled Radio Player -->
+<!-- Elfsight Radio Player | Untitled Radio Player 4 Copy -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-29aa10fe-e814-41b1-b582-5877a4002a0a" data-elfsight-app-lazy></div>
+<div class="elfsight-app-f7900768-e710-468d-a786-2f7b5aeea77a" data-elfsight-app-lazy></div>
   <header>
     <h1>Салон красоты «Прекрасная жизнь»</h1>
   </header>
