--- a/тест/index.html
+++ b/тест/index.html
@@ -121,9 +121,9 @@
   </style>
 </head>
 <body>
-<!-- Elfsight Radio Player | Untitled Radio Player 4 Copy -->
+<!-- Elfsight Website Translator | TEST API Copy -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-f7900768-e710-468d-a786-2f7b5aeea77a" data-elfsight-app-lazy></div>
+<div class="elfsight-app-becc3f6a-a78d-4dce-ac75-34fd3d0e6940" data-elfsight-app-lazy></div>
   <header>
     <h1>Салон красоты «Прекрасная жизнь»</h1>
   </header>
