--- a/тест/index.html
+++ b/тест/index.html
@@ -204,4 +204,7 @@
     });
   </script>
 </body>
+    <footer><!-- Elfsight Business Hours | BH: Custom Hours text issue fix (WIDGETS-3817) -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-a94b9242-3cb4-4b34-a0ce-e147bb08e272" data-elfsight-app-lazy></div></footer>
 </html>
